<?xml version="1.0" encoding="UTF-8"?>
<!-- 
/*******************************************************************************
* Copyright 2013 Jeff MAURY
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
******************************************************************************/
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>
  <groupId>org.eclipsecon2013.tycho</groupId>
  <artifactId>parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Eclipse2013 Tycho workshop</name>
  <description>Eclipse2013 Tycho workshop</description>
  <url>http://github.com/jeffmaury/eclipsecon2013-tycho</url>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git@github.com:jeffmaury/eclipsecon2013-tycho.git</connection>
    <developerConnection>scm:git:git@github.com:jeffmaury/eclipsecon2013-tycho.git</developerConnection>
    <url>scm:git:git@github.com:jeffmaury/eclipsecon2013-tycho.git</url>
  </scm>
  <developers>
    <developer>
      <id>jeffmaury</id>
      <name>Jeff MAURY</name>
      <email>jeffmaury@jeffmaury.com</email>
    </developer>
  </developers>
  <properties>
    <tycho-version>0.17.0</tycho-version>
    <sonar.jacoco.reportPath>../target/jacoco.exec</sonar.jacoco.reportPath>
  </properties>
  <modules>
    <module>org.eclipsecon2013.tycho.target.e37</module>
    <module>org.eclipsecon2013.tycho.target.e42</module>
    <module>org.eclipsecon2013.tycho.plugin</module>
    <module>org.eclipsecon2013.tycho.plugin.tests</module>
    <module>org.eclipsecon2013.tycho.site</module>
    <module>org.eclipsecon2013.tycho.feature</module>
    <module>org.eclipsecon2013.tycho.product</module>
  </modules>
  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <environments>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
          <target>
            <artifact>
              <groupId>${project.groupId}</groupId>
              <artifactId>${project.groupId}.target.${target-platform}</artifactId>
              <version>${project.version}</version>
            </artifact>
          </target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.6.2.201302030002</version>
        <executions>
          <execution>
            <id>prepare</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <destFile>${sonar.jacoco.reportPath}</destFile>
              <append>true</append>
              <includes>
                <include>org.eclipsecon2013.tycho.*</include>
              </includes>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <source>1.5</source>
            <target>1.5</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <useUIHarness>true</useUIHarness>
            <useUIThread>false</useUIThread>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement> 
  </build>
  <profiles>
    <profile>
      <id>e37</id>
      <activation>
        <property>
          <name>!target-profile</name>
        </property>
      </activation>
      <properties>
        <target-platform>e37</target-platform>
      </properties>
    </profile>
    <profile>
      <id>e42</id>
      <activation>
        <property>
          <name>target-profile</name>
          <value>e42</value>
         </property>
      </activation>
      <properties>
        <target-platform>e42</target-platform>
      </properties>
    </profile>
    <profile>
      <id>sun-jvm</id>
      <activation>
        <property>
          <name>java.vendor.url</name>
          <value>http://java.sun.com/</value>
        </property>
      </activation>
      <properties>
        <tycho.testArgLine>-Xmx800m -XX:MaxPermSize=256m</tycho.testArgLine>
      </properties>
    </profile>
    <profile>
      <id>osx</id>
      <activation>
        <property>
          <name>java.vendor.url</name>
          <value>http://www.apple.com/</value>
        </property>
      </activation>
      <properties>
        <tycho.testArgLine>-Xmx800m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread</tycho.testArgLine>
        <osgi.ws>cocoa</osgi.ws>
      </properties>
    </profile>
  </profiles>
</project>

